all endpoints and swagger working
