# internal/swagger/docs/swagger.json
@@ -4,30 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/health-check": {
-            "get": {
-                "description": "Health check response",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "health-check"
-                ],
-                "summary": "Health check response",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.responseMsg"
-                        }
-                    }
-                }
-            }
-        },
-        "/user": {
+        "/": {
             "get": {
                 "description": "A test endpoint to get everything up and running",
                 "produces": [
@@ -48,6 +25,29 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/handlers.responseErr"
+                        }
+                    }
+                }
+            }
+        },
+        "/health-check": {
+            "get": {
+                "description": "Health check response",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health-check"
+                ],
+                "summary": "Health check response",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.responseMsg"
                         }
                     }
                 }
